--- a/src/pages/forsiden/forsiden.njk
+++ b/src/pages/forsiden/forsiden.njk
@@ -1,5 +1,5 @@
 ---
-type: 'Privat'
+type: 'Privatperson'
 title: 'Forside'
 description: 'Lenker til de viktigste områdene + utvalgte snarveier.'
 tags: ['template']
