--- a/src/pages/kontor/kontor.njk
+++ b/src/pages/kontor/kontor.njk
@@ -3,18 +3,35 @@ title: 'Kontorside'
 description: ''
 order: 3
 bodyClass: 'bg-white'
+permalink: false
 ---
+
 {%- extends 'base.njk' -%}
+
+{%- macro iconBox(box) -%}
+  <div class="grid isolate">
+    <div class="z-10 grid w-16 mx-auto translate-y-1/2 bg-blue-100 rounded-full place-items-center aspect-square">
+      {{ box.icon | svgContents('w-7 h-7 shrink-0') | safe }}
+    </div>
+    <div class="px-6 py-8 bg-white md:py-12 md:px-10">
+      <h2 class="mt-8 text-2xl font-semibold">{{ box.title | safe }}</h2>
+      <div class="mt-2 markdown">
+        {{ box.content | markdown | safe }}
+      </div>
+    </div>
+  </div>
+{%- endmacro -%}
+
 
 {%- block content -%}
   <main class="min-h-[61vh] text-lg text-gray-800">
 
-    <div class="pt-8 pb-4 grid grid-cols-layout ">
+    <div class="grid pt-8 pb-4 grid-cols-layout ">
       <div class="col-narrow">
         <h1 class="text-3xl font-semibold leading-tight text-gray-900 md:text-4xl">
           NAV Andeby
         </h1>
-        <p class="flex items-baseline mt-1 gap-4">
+        <p class="flex items-baseline gap-4 mt-1">
           <span class="text-sm tracking-wider text-gray-700 uppercase">
             NAV kontor
           </span>
@@ -24,7 +41,7 @@ bodyClass: 'bg-white'
       </div>
     </div>
 
-    <div class="pt-4 pb-20 grid grid-cols-layout md:pt-6">
+    <div class="grid pt-4 pb-20 grid-cols-layout md:pt-6">
       <div class="col-narrow">
         <div class="max-w-prose">
 
@@ -77,13 +94,13 @@ bodyClass: 'bg-white'
       </div>
     </div>
 
-    <div class="pb-12 bg-gray-100 grid grid-cols-layout">
+    <div class="grid pb-12 bg-gray-100 grid-cols-layout">
       <div class="col-narrow">
         <div class="max-w-prose">
 
-          {%- for box in boxes -%}
+          {% for box in boxes %}
             {{ iconBox(box) }}
-          {%- endfor -%}
+          {% endfor %}
 
         </div>
       </div>
@@ -91,20 +108,6 @@ bodyClass: 'bg-white'
 
   </main>
 {%- endblock -%}
-
-{%- macro iconBox(box) -%}
-  <div class="grid isolate">
-    <div class="z-10 w-16 mx-auto bg-blue-100 rounded-full grid translate-y-1/2 place-items-center aspect-square">
-      {{ box.icon | svgContents('w-7 h-7 shrink-0') | safe }}
-    </div>
-    <div class="px-6 py-8 bg-white md:py-12 md:px-10">
-      <h2 class="mt-8 text-2xl font-semibold">{{ box.title | safe }}</h2>
-      <div class="mt-2 markdown">
-        {{ box.content | markdown | safe }}
-      </div>
-    </div>
-  </div>
-{%- endmacro -%}
 
 {%- block styles -%}{%- endblock -%}
 {%- block script -%}{%- endblock -%}
