--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -2,7 +2,9 @@
 
 {# Markdown #}
 {%- if block.type === 'markdown' -%}
-  {{ block.data  | markdown | safe }}
+  <div class="markdown {{ block.class }}">
+    {{ block.data  | markdown | safe }}
+  </div>
 {%- endif -%}
 
 {# Actions #}
@@ -89,7 +91,7 @@
 
 {# Radios #}
 {% if block.type === 'radios' %}
-  <div class="p-4 rounded bg-gray-50">
+  <div class="{{ block.class }}">
     <fieldset>
       <legend class="font-semibold">{{ block.legend }}</legend>
       {% if block.description %}
@@ -106,7 +108,7 @@
 
 {# Checkboxes #}
 {% if block.type === 'checkboxes' %}
-  <div class="p-4 rounded bg-gray-50">
+  <div class="{{ block.class }}">
     <fieldset>
       <legend class="font-semibold">{{ block.legend }}</legend>
       {% if block.description %}
@@ -123,14 +125,14 @@
 
 {# Text Input #}
 {% if block.type === 'textinput' %}
-  <div class="p-4 rounded bg-gray-50">
+  <div class="{{ block.class }}">
     {{ form.textinput({ label: block.label, description: block.description, id: 'text1' }) }}
   </div>
 {% endif %}
 
 {# Text Area #}
 {% if block.type === 'textarea' %}
-  <div class="p-4 rounded bg-gray-50">
+  <div class="{{ block.class }}">
     {{ form.textarea({ label: block.label, description: block.description, id: 'text2' }) }}
   </div>
 {% endif %}
