--- a/src/pages/soknad-og-skjema/samarbeidspartner/samarbeidspartner.njk
+++ b/src/pages/soknad-og-skjema/samarbeidspartner/samarbeidspartner.njk
@@ -23,8 +23,8 @@ permalink: '/soknad-og-skjema-samarbeidspartner/'
       <div class="mt-10 md:col-start-2">
         <ul class="gap-12 text-xl lg:columns-2">
           {% for item in roleFilter %}
-          <li class="grid border-t border-gray-200 break-inside-avoid">
-            <a href="/soknad-og-skjema-samarbeidspartner/{{ item | slugify }}/" class="relative z-10 flex py-4 text-left text-blue-500 underline hover:no-underline hover:text-deepblue-600">{{ item | safe }}</a>
+          <li class="-mb-px border-t border-b border-gray-200 break-inside-avoid">
+            <a href="/soknad-og-skjema-samarbeidspartner/{{ item | slugify }}/" class="relative z-10 inline-block py-4 text-left text-blue-500 underline hover:no-underline hover:text-deepblue-600">{{ item | safe }}</a>
           </li>
           {% endfor %}
         </ul>
