--- a/src/pages/soknad/foreldrepenger.njk
+++ b/src/pages/soknad/foreldrepenger.njk
@@ -2,75 +2,141 @@
 type: 'Mellomsteg'
 title: 'Søk om foreldrepenger'
 kicker: 'Søknad'
-form: 'NAV-XXXXXX'
 tags: ['template']
 permalink: "/soknad/{{ page.fileSlug }}/"
-order: 8
+order: 7
 ---
 {%- extends 'base-basic.njk' -%}
 
+{%- from "macros/button.njk" import button -%}
+{%- import "macros/formFields.njk" as form -%}
+
+
 {%- block content -%}
-  <main class="text-lg min-h-[70vh] bg-gray-50" x-data="{ stepperOpen: false }">
-    <div class="grid pt-10 pb-6 bg-white grid-cols-layout ">
-      <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start w-full auto-rows-min">
+  <main class="grid py-8 md:py-12 text-lg grid-cols-layout min-h-[70vh]" x-data="{ stepperOpen: false }">
+    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 md:grid md:grid-cols-[6rem_auto] md:gap-8 items-start mb-12 w-full auto-rows-min">
 
-        {# Pictogram #}
-        {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 -top-2 md:relative hidden xs:block') | safe }}
+      {# Pictogram #}
+      {{ '/src/_includes/svg/pictograms/soknad-og-skjema.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 float-right ml-8') | safe }}
 
-        {# Intro #}
-        <div class="md:col-start-2 md:row-start-1">
-          <p class="text-base tracking-wider uppercase opacity-70">
-            {{ kicker | upper }}
-            {{ '–' if form }}
-            {{ form | safe }}
-          </p>
-          <h1 class="mt-2 text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
-        </div>
+      {# Intro #}
+      <div class="md:col-start-2 md:row-start-1">
+        <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
+        <p class="mt-2 text-base tracking-wider uppercase opacity-70">
+          {{ kicker | upper }}
+          {{ '–' if formId }}
+          {{ formId | safe }}
+        </p>
       </div>
-    </div>
-    <div class="grid py-8 grid-cols-layout">
-      <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full auto-rows-min">
-        <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
-          <form class="text-lg max-w-prose markup" x-data="{ applicationFormat: 'digital' }">
-            <fieldset>
+
+      <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
+        <div class="mt-12 text-lg max-w-prose markup">
+          <form x-data="{ applicationFormat: 'digital', applicationStep: 1 }">
+            <fieldset x-show="applicationStep === 1">
               <legend class="font-semibold">Hvordan vil du sende søknaden?</legend>
               <ul class="grid mt-1 justify-items-start">
                 <li class="relative">
-                  <input class="absolute w-6 h-6 rounded-full -z-10 appearance-none focus:outline-none focus:bg-deepblue-800 top-1.5 peer focus:ring focus:ring-deepblue-800" type="radio" name="application-format" x-model="applicationFormat" value="digital" id="field-1">
-                  <label class="py-1.5 flex before:w-6 before:h-6 before:bg-white before:border-2 before:border-gray-600 hover:before:border-blue-500 before:rounded-full gap-2 hover:before:bg-blue-50 cursor-pointer peer-checked:before:bg-blue-500 before:ring-2 before:ring-white before:ring-inset" for="field-1">
-                    <span>Send digitalt (du blir bedt om å logge inn)</span>
-                  </label>
+                  {{ form.radio({
+                    label: 'Send digitalt',
+                    description: 'Du blir bedt om å logge inn',
+                    name: 'application-format',
+                    id: 'field-1a',
+                    value: 'digital',
+                    xModel: 'applicationFormat',
+                    checked: true
+                  }) }}
                 </li>
                 <li class="relative">
-                  <input class="absolute w-6 h-6 rounded-full -z-10 appearance-none focus:outline-none focus:bg-deepblue-800 top-1.5 peer focus:ring focus:ring-deepblue-800" type="radio" name="application-format" x-model="applicationFormat" value="papir" id="field-2">
-                  <label class="py-1.5 flex before:w-6 before:h-6 before:bg-white before:border-2 before:border-gray-600 hover:before:border-blue-500 before:rounded-full gap-2 hover:before:bg-blue-50 cursor-pointer peer-checked:before:bg-blue-500 before:ring-2 before:ring-white before:ring-inset" for="field-2">
-                    <span>Send i posten</span>
-                  </label>
+                  {{ form.radio({
+                    label: 'Send i posten',
+                    description: 'Fyll ut søknaden før du skriver den ut. Du trenger ikke å logge inn.',
+                    name: 'application-format',
+                    value: 'post',
+                    id: 'field-2a',
+                    xModel: 'applicationFormat'
+                  }) }}
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="mt-7" x-show="applicationFormat === 'papir'">
+
+            <fieldset class="" x-show="applicationStep === 2">
               <legend class="font-semibold">Hva skal du søke om?</legend>
               <ul class="grid mt-1 justify-items-start">
                 <li class="relative">
-                  <input class="absolute w-6 h-6 rounded-full -z-10 appearance-none focus:outline-none focus:bg-deepblue-800 top-1.5 peer focus:ring focus:ring-deepblue-800" type="radio" name="application-type" value="" id="field-3">
-                  <label class="py-1.5 flex before:w-6 before:h-6 before:bg-white before:border-2 before:border-gray-600 hover:before:border-blue-500 before:rounded-full gap-2 hover:before:bg-blue-50 cursor-pointer peer-checked:before:bg-blue-500 before:ring-2 before:ring-white before:ring-inset" for="field-3">Søke om foreldrepenger ved fødsel</label>
+                  {{ form.radio({
+                    label: 'Dagpenger når du ikke er permittert',
+                    description: '',
+                    name: 'application-format',
+                    id: 'field-1b'
+                  }) }}
                 </li>
-                <li class="relative">
-                  <input class="absolute w-6 h-6 rounded-full -z-10 appearance-none focus:outline-none focus:bg-deepblue-800 top-1.5 peer focus:ring focus:ring-deepblue-800" type="radio" name="application-type" value="" id="field-4">
-                  <label class="py-1.5 flex before:w-6 before:h-6 before:bg-white before:border-2 before:border-gray-600 hover:before:border-blue-500 before:rounded-full gap-2 hover:before:bg-blue-50 cursor-pointer peer-checked:before:bg-blue-500 before:ring-2 before:ring-white before:ring-inset" for="field-4">Søke om foreldrepenger ved adopsjon</label>
+                <li
+                  class="relative"
+                  x-show="applicationFormat === 'post'"
+                  x-transition:enter="transition ease-out duration-300 delay-100"
+                  x-transition:enter-start="opacity-0 -translate-y-1"
+                  x-transition:enter-end="opacity-100"
+                >
+                  {{ form.radio({
+                    label: 'Dagpenger når du er permittert',
+                    description: '',
+                    name: 'application-format',
+                    id: 'field-2b'
+                  }) }}
                 </li>
-                <li class="relative">
-                  <input class="absolute w-6 h-6 rounded-full -z-10 appearance-none focus:outline-none focus:bg-deepblue-800 top-1.5 peer focus:ring focus:ring-deepblue-800" type="radio" name="application-type" value="" id="field-5">
-                  <label class="py-1.5 flex before:w-6 before:h-6 before:bg-white before:border-2 before:border-gray-600 hover:before:border-blue-500 before:rounded-full gap-2 hover:before:bg-blue-50 cursor-pointer peer-checked:before:bg-blue-500 before:ring-2 before:ring-white before:ring-inset" for="field-5">Søke om endring eller nytt uttak av foreldrepenger</label>
+                <li
+                  class="relative"
+                  x-show="applicationFormat === 'post'"
+                  x-transition:enter="transition ease-out duration-300 delay-150"
+                  x-transition:enter-start="opacity-0 -translate-y-1"
+                  x-transition:enter-end="opacity-100"
+                >
+                  {{ form.radio({
+                    label: 'Gjenoppta dagpenger når du ikke er permittert',
+                    description: '',
+                    name: 'application-format',
+                    id: 'field-3b'
+                  }) }}
+                </li>
+                <li
+                  class="relative"
+                  x-show="applicationFormat === 'post'"
+                  x-transition:enter="transition ease-out duration-300 delay-150"
+                  x-transition:enter-start="opacity-0 -translate-y-2"
+                  x-transition:enter-end="opacity-100"
+                >
+                  {{ form.radio({
+                    label: 'Gjenoppta dagpenger når du er permittert',
+                    description: '',
+                    name: 'application-format',
+                    id: 'field-4b'
+                  }) }}
                 </li>
               </ul>
             </fieldset>
+            <div class="mt-7" x-show="(applicationStep === 1) && (applicationFormat === 'post')">
+              <button
+                class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white"
+                type="button"
+                x-on:click="applicationStep = 2"
+              >Neste</button>
+            </div>
             <div class="mt-7">
-              <button class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white" type="submit">Start søknad</button>
+              <a
+                x-show="(applicationStep === 2) || (applicationFormat === 'digital')"
+                class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white"
+                href="#"
+              >Neste</a>
+              <button
+                x-show="(applicationStep === 2) || (applicationStep === 3)"
+                class="inline-flex px-6 py-2.5 text-blue-500 ring-2 ring-inset ring-blue-500 fine:hover:bg-blue-50 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-offset-1 focus-visible:ring-offset-white"
+                type="button"
+                x-on:click="applicationStep = 1"
+              >Tilbake</button>
             </div>
           </form>
         </div>
+
       </div>
     </div>
   </main>
