--- a/src/_includes/base-new.njk
+++ b/src/_includes/base-new.njk
@@ -27,6 +27,8 @@
     x-data="{
       indexOpen: false,
       audienceDropdownOpen: false,
+      loggedIn: true,
+      loginOpen: false,
       menuOpen: false,
       notifyOpen: false,
       newNotifications: true
