--- a/src/pages/soknad/dagpenger/dagpenger.njk
+++ b/src/pages/soknad/dagpenger/dagpenger.njk
@@ -1,27 +1,19 @@
----
-type: 'Mellomsteg'
-title: 'Søk om dagpenger'
-kicker: 'Søknad'
-tags: ['template']
-permalink: "/soknad/{{ page.fileSlug }}/"
-order: 7
-fileList:
-  -
-    title: Søknad om dagpenger når du er arbeidsledig
-    type: PDF
-    filesize: 100 kB
-  -
-    title: Søknad om dagpenger når du er permittert
-    type: PDF
-    filesize: 100 kB
-  -
-    title: Søknad om å gjenoppta dagpenger når du er permittert
-    type: PDF
-    filesize: 100 kB
-  -
-    title: Søknad om å gjenoppta dagpenger når du er permittert
-    type: PDF
-    filesize: 100 kB
+---js
+{
+  type: "Mellomsteg",
+  tags: ["template"],
+  pagination: {
+    data: "preSteps",
+    size: 1,
+    alias: "step",
+  },
+  eleventyComputed: {
+    title: "Søk om dagpenger",
+    kicker: "Søknad",
+    stepTitle: "{{ step.title }}",
+    permalink: "/soknad-og-skjema/dagpenger-{{ pagination.pageNumber + 1 }}/",
+  }
+}
 ---
 {%- extends 'base-basic.njk' -%}
 
@@ -46,192 +38,35 @@ fileList:
         </p>
       </div>
 
-      <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
-        <div class="mt-12 text-lg max-w-prose markup">
-          <form x-data="{ applicationFormat: 'digital', applicationStep: 1 }">
-            <fieldset x-show="applicationStep === 1">
-              <legend class="font-semibold">Hvordan vil du sende søknaden?</legend>
-              <ul class="grid mt-1 justify-items-start">
-                <li class="relative">
-                  {{ form.radio({
-                    label: 'Send digitalt',
-                    description: 'Du blir bedt om å logge inn',
-                    name: 'application-format',
-                    id: 'field-1a',
-                    value: 'digital',
-                    xModel: 'applicationFormat',
-                    checked: true
-                  }) }}
-                </li>
-                <li class="relative">
-                  {{ form.radio({
-                    label: 'Send i posten',
-                    description: 'Fyll ut søknaden før du skriver den ut. Du trenger ikke å logge inn.',
-                    name: 'application-format',
-                    value: 'post',
-                    id: 'field-2a',
-                    xModel: 'applicationFormat'
-                  }) }}
-                </li>
-                <li class="relative">
-                  {{ form.radio({
-                    label: 'Last ned papirsøknad (pdf)',
-                    description: 'Skriv ut en papirsøknad som du fyller ut for hånd og sender i posten. Du trenger ikke å logge inn.',
-                    name: 'application-format',
-                    value: 'pdf',
-                    id: 'field-3a',
-                    xModel: 'applicationFormat'
-                  }) }}
-                </li>
-              </ul>
-            </fieldset>
-
-            <fieldset class="" x-show="applicationStep === 2">
-              <legend class="font-semibold">Hva skal du søke om?</legend>
-              <ul class="grid mt-1 justify-items-start">
-                <li class="relative">
-                  {{ form.radio({
-                    label: 'Dagpenger når du ikke er permittert',
-                    description: '',
-                    name: 'application-format',
-                    id: 'field-1b'
-                  }) }}
-                </li>
-                <li
-                  class="relative"
-                  x-show="applicationFormat === 'post'"
-                  x-transition:enter="transition ease-out duration-300 delay-100"
-                  x-transition:enter-start="opacity-0 -translate-y-1"
-                  x-transition:enter-end="opacity-100"
-                >
-                  {{ form.radio({
-                    label: 'Dagpenger når du er permittert',
-                    description: '',
-                    name: 'application-format',
-                    id: 'field-2b'
-                  }) }}
-                </li>
-                <li
-                  class="relative"
-                  x-show="applicationFormat === 'post'"
-                  x-transition:enter="transition ease-out duration-300 delay-150"
-                  x-transition:enter-start="opacity-0 -translate-y-1"
-                  x-transition:enter-end="opacity-100"
-                >
-                  {{ form.radio({
-                    label: 'Gjenoppta dagpenger når du ikke er permittert',
-                    description: '',
-                    name: 'application-format',
-                    id: 'field-3b'
-                  }) }}
-                </li>
-                <li
-                  class="relative"
-                  x-show="applicationFormat === 'post'"
-                  x-transition:enter="transition ease-out duration-300 delay-150"
-                  x-transition:enter-start="opacity-0 -translate-y-2"
-                  x-transition:enter-end="opacity-100"
-                >
-                  {{ form.radio({
-                    label: 'Gjenoppta dagpenger når du er permittert',
-                    description: '',
-                    name: 'application-format',
-                    id: 'field-4b'
-                  }) }}
-                </li>
-              </ul>
-            </fieldset>
-
-            <div class="" x-show="applicationStep === 3">
-              <h3 class="text-xl font-semibold">Last ned papirsøknad</h3>
-              <p class="mt-1">Du skriver ut en papirsøknad som du fyller ut for hånd og sender i posten. Du trenger ikke å logge inn.</p>
-
-              <fieldset class="mt-8">
-                <legend class="font-semibold">Hva skal du søke om?</legend>
-                <ul class="grid mt-1 justify-items-start">
-                {% for item in fileList %}
-                  <li class="relative">
-                    {{ form.radio({
-                      label: item.title,
-                      description: '',
-                      name: 'print-pdf',
-                      id: 'field-' + loop.index + 'c'
-                    }) }}
-                  </li>
-                  {% endfor %}
-                </ul>
-              </fieldset>
+      <div class="md:col-start-2">
+        <div class="mt-6 text-lg max-w-prose">
+          {% if step.markdown %}
+            <div class="markdown">
+              {{ step.markdown | markdown | safe }}
             </div>
+          {% endif %}
 
-            {# <div x-show="applicationStep === 3">
-              <h3 class="text-xl font-semibold">Last ned papirsøknad</h3>
-              <p class="mt-1">Du skriver ut en papirsøknad som du fyller ut for hånd og sender i posten. Du trenger ikke å logge inn.</p>
-              <ul class="grid gap-1.5 mt-8">
-                {% for item in fileList %}
-                  <li>
-                    <a href="#" class="flex items-start gap-2 pt-2 pb-1.5 pl-3 pr-6 text-blue-500 rounded-lg bg-gray-100 fine:hover:text-deepblue-600 group fine:hover:bg-gray-50">
-                      {{ '/src/_includes/svg/icons/download.svg' | svgContents('w-6 h-6 shrink-0 translate-y-0.5') | safe }}
-                      <span class="grid">
-                        <span class="font-semibold underline group-hover:no-underline">{{ item.title }}</span>
-                        <span class="text-base text-gray-700">{{ item.type }} {{ item.filesize }}</span>
-                      </span>
-                    </a>
-                  </li>
-                {% endfor %}
-              </ul>
-            </div> #}
+          <h2 class="mt-8 text-xl font-semibold">{{ step.question }}</h2>
+          <ul class="grid gap-2 mt-2">
+            {% for answer in step.answers %}
+            <li>
+              <a href="{{ answer.href or '#' }}" class="flex items-center justify-between gap-4 px-4 py-3 border border-gray-400 rounded group sm:px-6 sm:py-4 hover:border-gray-600 hover:bg-blue-50 min-h-20">
+                <span class="grid">
+                <span class="text-xl font-semibold">{{ answer.title }}</span>
+                <span>{{ answer.description }}</span>
+                </span>
+                {{ '/src/_includes/svg/icons/chevron-right.svg' | svgContents('w-5 h-5 opacity-80 group-hover:translate-x-1 transition') | safe }}
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
 
-            <div class="mt-7" x-show="(applicationStep === 1) && (applicationFormat === 'digital')">
-              <a
-                class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white"
-                href="/soknad/dagpenger/intro/"
-              >Neste</a>
-            </div>
-
-            <div class="mt-7" x-show="(applicationStep === 1) && (applicationFormat === 'post')">
-              <button
-                class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white"
-                type="button"
-                x-on:click="applicationStep = 2"
-              >Neste</button>
-            </div>
-
-            <div class="mt-7" x-show="(applicationStep === 1) && (applicationFormat === 'pdf')">
-              <button
-                class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white"
-                type="button"
-                x-on:click="applicationStep = 3"
-              >Neste</button>
-            </div>
-
-
-
-            <div class="mt-7" x-show="(applicationStep === 2)">
-              <a
-                class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white"
-                href="/soknad/dagpenger/intro/"
-              >Neste</a>
-              <button
-                class="inline-flex px-6 py-2.5 text-blue-500 ring-2 ring-inset ring-blue-500 fine:hover:bg-blue-50 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-offset-1 focus-visible:ring-offset-white"
-                type="button"
-                x-on:click="applicationStep = 1"
-              >Tilbake</button>
-            </div>
-
-            <div class="mt-7" x-show="(applicationStep === 3)">
-              <button
-                class="inline-flex px-6 py-2.5 text-white bg-blue-500 fine:hover:bg-blue-600 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-blue-800 focus-visible:ring-offset-1 focus-visible:ring-offset-white"
-                type="button"
-              >Neste</button>
-              <button
-                class="inline-flex px-6 py-2.5 text-blue-500 ring-2 ring-inset ring-blue-500 fine:hover:bg-blue-50 rounded focus-visible:outline-none focus-visible:ring focus-visible:ring-offset-1 focus-visible:ring-offset-white"
-                type="button"
-                x-on:click="applicationStep = 1"
-              >Tilbake</button>
-            </div>
-          </form>
+          {% if pagination.pageNumber > 0 %}
+          <div class="mt-8">
+            <a class="font-semibold text-blue-500 underline hover:no-underline hover:text-deepblue-600" href="/soknad-og-skjema/dagpenger-1/">Tilbake</a>
+          </div>
+          {% endif %}
         </div>
-
       </div>
     </div>
   </main>
