--- a/src/_includes/macros/filterGroup.njk
+++ b/src/_includes/macros/filterGroup.njk
@@ -4,7 +4,8 @@
 
 {%- macro filterGroup(params) -%}
 <fieldset class="">
-  <legend class="text-sm tracking-widest uppercase opacity-70">{{ params.title }}</legend>
+  {# text-sm tracking-widest uppercase opacity-70 #}
+  <legend class="font-semibold">{{ params.title }}</legend>
 
   {%- set buttonClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base text-left rounded-full focus:ring-2" -%}
 
@@ -15,7 +16,7 @@
         type="button"
         class="{{ buttonClasses }}"
         x-on:click="{{ params.value }} = 'alle', updateCount($refs)"
-        x-bind:class="{{ params.value }} === 'alle' ? 'text-white bg-deepblue-500' : 'bg-gray-100 fine:hover:bg-deepblue-100'"
+        x-bind:class="{{ params.value }} === 'alle' ? 'text-white bg-deepblue-500' : 'bg-deepblue-50 fine:hover:bg-deepblue-100'"
       >Alle</button>
     </li>
     {%- endif -%}
