--- a/src/pages/soknad-og-skjema/samarbeidspartner/rolle.njk
+++ b/src/pages/soknad-og-skjema/samarbeidspartner/rolle.njk
@@ -10,7 +10,7 @@
   eleventyComputed: {
     roleSlug: "{{ role | slugify }}",
     permalink: "/soknad-og-skjema-samarbeidspartner/{{ role | slugify }}/",
-    description: 'Søknader og skjema for {{ role | lowerfirst }}'
+    description: 'Finn søknad og skjema til pengestøtter og tjenester {{ role | lowerfirst }} fra NAV'
   }
 }
 ---
@@ -22,28 +22,13 @@
 {%- from "macros/microcard.njk" import microcard -%}
 {%- from "macros/filterGroup.njk" import filterGroup -%}
 
-{% macro rolePills(roleTitle) %}
-  {# <fieldset class="">
-    <legend class="text-sm tracking-widest uppercase opacity-70">{{ roleTitle }}</legend>
-    <ul class="flex flex-wrap items-start mt-2.5 gap-x-2 gap-y-3">
-      {%- for item in roleFilter -%}
-      <li>
-        <a
-          href="/soknad-og-skjema-samarbeidspartner/{{ item | slugify }}/"
-          x-bind:href="'/person/prototype/soknad-og-skjema-samarbeidspartner/{{ item | slugify }}/?type=' + typeFilter"
-          class="inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base text-left rounded-full focus:ring-2 {{ 'text-white bg-deepblue-500' if (item | slugify) === (roleSlug) else 'bg-deepblue-50 fine:hover:bg-deepblue-100' }}"
-        >{{ item | safe }}</a>
-      </li>
-      {%- endfor -%}
-    </ul>
-  </fieldset> #}
-{% endmacro %}
-
-
 {%- set productsLength = products | filterByRole(role) | length -%}
 
 {%- block content -%}
-  <main class="grid py-12 text-lg text-gray-900 grid-cols-layout"
+  {% include "partials/language.njk" %}
+
+  <main
+    class="grid pb-4 text-lg md:pb-12 grid-cols-layout"
     x-data="{
       typeFilter: new URLSearchParams(location.search).get('type') || 'alle',
       filterItem(el) {
@@ -84,107 +69,85 @@
       });
       updateCount()"
   >
-    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full">
+    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 md:grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full">
 
       {# Pictogram #}
-      {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-full h-auto max-w-20 md:ml-2 text-green-800 absolute right-0 md:relative') | safe }}
+      {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-full h-auto max-w-20 ml-6 md:ml-2 text-green-800 float-right md:float-none row-start-1') | safe }}
 
       {# Intro #}
-      <div class="pr-28 md:col-start-2 md:row-start-1 md:pr-0">
+      <div class="md:col-start-2 md:row-start-1">
         <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
         <p class="mt-2 text-sm tracking-wider text-gray-700 uppercase">{{ kicker | safe }}</p>
         <p class="max-w-2xl mt-8 text-xl md:text-2xl">{{ description | safe }}. <a class="text-blue-500 underline hover:no-underline hover:text-deepblue-600" href="/soknad-og-skjema-samarbeidspartner/">Bytt rolle</a>.</p>
       </div>
 
-      <div class="md:col-start-2 md:grid md:grid-cols-[2fr_1fr] gap-x-16 items-start gap-4 mt-8">
+      <div class="md:col-start-2 md:grid md:grid-cols-[2fr_1fr] gap-x-16 items-start gap-4 mt-6">
 
         {%- if productsLength > 7 -%}
-        <div class="md:col-start-2 md:row-start-1" x-data="{ filterDrawer: false }">
-          <button
-            class="flex items-center mb-8 justify-start gap-2.5 pl-3 pr-4 py-3 leading-none text-blue-600 bg-white rounded ring-2 ring-blue-500 hover:bg-blue-100 hover:text-blue-700 md:hidden"
-            x-on:click="filterDrawer = true"
-            x-bind:aria-expanded="filterDrawer">
-            {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
-            <span>Søk eller velg tjenestetype</span>
-          </button>
+          <div class="md:col-start-2 md:row-start-1" x-data="{ filterDrawer: false }">
 
-          <div
-            class="fixed inset-y-0 right-0 z-50 w-10/12 max-w-md md:hidden"
-            x-show="filterDrawer"
-            x-transition:enter="transition ease-out duration-300"
-            x-transition:enter-start="translate-x-full opacity-0"
-            x-transition:enter-end="translate-x-0 opacity-100"
-            x-transition:leave="transition ease-in duration-300"
-            x-transition:leave-start="translate-x-0 opacity-100"
-            x-transition:leave-end="translate-x-full opacity-0"
-          >
-            <form class="flex flex-col h-full bg-white shadow-drawer col-narrow md:hidden" x-on:click.outside="filterDrawer = false, filterTags = false">
-              <div class="flex-1 px-6 pb-12 overflow-y-auto overscroll-y-contain">
-                <div class="relative grid gap-8 pt-6" >
-                  {{ rolePills('Velg rolle') }}
+            <div class="mb-8 md:hidden">
+              <label for="searchFilter-desktop" class="font-semibold">Bruk filter eller søk</label>
+              <div class="flex flex-row-reverse gap-3 mt-1.5">
+                <div class="relative flex-1">
+                  <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                    {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                  </span>
+                  <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl py-2.5 pl-10 pr-3 bg-white border border-gray-300 rounded shadow-inner appearance-none focus:outline-none focus:ring focus:ring-blue-800">
+                </div>
+                <button
+                  type="button"
+                  class="flex items-center gap-2 pl-2.5 pr-3.5 border rounded shrink-0 text-deepblue-800 bg-deepblue-100 border-deepblue-200 hover:text-white hover:bg-deepblue-600 hover:border-deepblue-600"
+                  x-on:click="filterDrawer = !filterDrawer"
+                  x-bind:aria-expanded="filterDrawer">
+                  {{ '/src/_includes/svg/icons/filter.svg' | svgContents('w-5 h-5') | safe }}
+                  <span>Filter</span>
+                </button>
+              </div>
+
+
+            <div
+              x-show="filterDrawer"
+              x-transition:enter="transition ease-out duration-500"
+              x-transition:enter-start="-translate-y-2 opacity-0"
+              x-transition:enter-end="translate-y-0 opacity-100"
+            >
+              <form class="mt-8 bg-white col-narrow">
+                <div class="relative grid gap-8">
                   {{ filterGroup({
                     array: typeFilter,
                     title: 'Velg type',
                     value: 'typeFilter',
                     showAll: true
                   }) }}
-
-                  <div>
-                    <label for="searchFilter-mobile" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
-                    <div class="relative mt-1">
-                      <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-                        {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-                      </span>
-                      <input id="searchFilter-mobile" type="search" x-model="search" class=" w-full pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring-2 focus:ring-blue-800">
-                    </div>
-                  </div>
                 </div>
-              </div>
-              <div class="sticky bottom-0 h-2 -mt-2 pointer-events-none bg-gradient-to-t from-black/10 to-black/0"></div>
-              <div class="px-6 py-4 bg-gray-50">
-                <button type="button" class="w-full px-4 py-2 text-white bg-blue-500 rounded-lg" x-on:click="filterTags = false, filterDrawer = false">Vis resultat (<span x-text="count"></span>)</button>
-              </div>
-            </form>
+              </form>
+            </div>
+
           </div>
 
-          <button
-            type="button"
-            class="fixed inset-0 z-40 bg-black/25"
-            x-show="filterDrawer"
-            x-on:click="filterDrawer = false"
-            x-transition:enter="transition ease-out duration-200"
-            x-transition:enter-start="opacity-0"
-            x-transition:enter-end="opacity-100"
-            x-transition:leave="transition ease-in duration-200"
-            x-transition:leave-start="opacity-100"
-            x-transition:leave-end="opacity-0"
-          >
-            <span class="sr-only">Lukk</span>
-          </button>
-
           <div class="hidden gap-8 md:grid">
-            {{ rolePills('Velg rolle') }}
+            <div>
+              <label for="searchFilter-desktop" class="font-semibold">Finn tjeneste</label>
+              <div class="relative mt-2">
+                <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
+                  {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
+                </span>
+                <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-white focus:outline-none focus:ring focus:ring-blue-800">
+              </div>
+            </div>
             {{ filterGroup({
               array: typeFilter,
               title: 'Velg type',
               value: 'typeFilter',
               showAll: true
             }) }}
-            <div class="">
-              <label for="searchFilter-desktop" class="text-sm tracking-widest uppercase opacity-70">Søk</label>
-              <div class="relative mt-1">
-                <span class="absolute inset-y-0 left-0 grid px-2.5 place-items-center">
-                  {{ '/src/_includes/svg/icons/search.svg' | svgContents('w-6 h-6') | safe }}
-                </span>
-                <input id="searchFilter-desktop" type="search" x-model="search" class="w-full max-w-xl pl-10 pr-3 py-2.5 border border-gray-300 rounded shadow-inner bg-gray-50/50 focus:outline-none focus:ring focus:ring-blue-800">
-              </div>
-            </div>
           </div>
         </div>
         {%- endif -%}
 
         <div class="md:col-start-1 md:row-start-1">
-          <p class="mt-3 mb-2">Viser <span x-text="count"></span> av {{ productsLength }}  tjenester</p>
+          <p class="mb-2">Viser <span x-text="count"></span> av {{ productsLength }}  tjenester</p>
 
           <div class="border-b border-deepblue-100" x-ref="entries" x-show="count !== 0">
             {%- for product in products | sort(true, false, 'title') | reverse -%}
