--- a/src/pages/soknad-og-skjema/privat/generisk-mellomsteg.njk
+++ b/src/pages/soknad-og-skjema/privat/generisk-mellomsteg.njk
@@ -42,7 +42,8 @@
 
       <div class="md:col-start-2 md:grid md:grid-cols-[2.2fr_0.8fr] gap-x-16 items-start gap-4">
         <div class="mt-12 text-lg max-w-prose markup">
-          Søknad starter her …
+          <p>Søknad starter her …</p>
+          <p class="mt-12"><a class="text-blue-500 underline hover:no-underline" href="/soknad-og-skjema/">Tilbake</a>
         </div>
 
       </div>
