--- a/src/pages/soknad-og-skjema/samarbeidspartner/samarbeidspartner.njk
+++ b/src/pages/soknad-og-skjema/samarbeidspartner/samarbeidspartner.njk
@@ -10,10 +10,10 @@ permalink: '/soknad-og-skjema-samarbeidspartner/'
   {% include "partials/language.njk" %}
 
   <main class="grid pb-4 text-lg md:pb-12 grid-cols-layout">
-    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 md:grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full">
+    <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 md:grid md:grid-cols-[8rem_auto] gap-x-8 items-start mb-12 w-full">
 
       {# Pictogram #}
-      {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-full h-auto max-w-20 ml-6 md:ml-2 text-green-800 float-right md:float-none row-start-1') | safe }}
+      {{ '/src/_includes/svg/pictograms/support.svg' | svgContents('w-full h-auto max-w-20 sm:max-w-24 ml-6 md:ml-2 text-green-800 float-right md:float-none row-start-1') | safe }}
 
       {# Intro #}
       <div class="md:col-start-2 md:row-start-1">
